k8s/backend-metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-metrics
  namespace: three-tier
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: metrics
      port: 5000
      targetPort: 5000
